Revision history for Perl extension Catalyst::Plugin::Static::Simple

0.11    
        - Changed 5.5 writing method to pass an IO::File object directly to
          $c->res->body.

0.10    2005-10-19 17:20:00
        - Added tt2 to the list of ignored extensions.
        - For Catalyst 5.5+, replaced File::Slurp with a buffered read/write
          process.  This will improve memory usage and performance on larger
          static files.
        - Removed Apache integration feature.  It is slower than serving
          through Catalyst and as far as I know no one is using it.  If you
          need the best performance, use a separate Location block for static
          content.

0.09    2005-10-07 13:40:00
        - Added new configuration options to improve security:
          ignore_extensions - keep certain extensions from being static
          - This option defaults to tt, html, and xhtml to prevent
            template files from being accessible.
          ignore_dirs - keep certain dirs from being static
        - include_path is no longer experimental.
        - Added support for hiding log output, depends on Cat 5.50. 
          (Marcus Ramberg)

0.08    2005-09-07 18:50:00
        - Added tests for everything except Apache support.

0.07    2005-09-05 21:05:00
        - POD fixes. (Thomas L. Shinnick)

0.06    2005-09-05 15:40:00
        - Moved initial file check into prepare_action so processing can
          bypass other plugins.
        - Added error-checking to static dir regexes.
        - Cleaned up various code as per Best Practices.

0.05    2005-08-26 12:00:00
        - Added use_apache option to enable the Apache DECLINED
          support.  Default is disabled as it appears Catalyst is
          faster at serving the files!
        - Added a check that Apache's DocumentRoot matches Catalyst's
          root before serving DECLINED.
        - Preload MIME::Types index during setup() so it's not built on
          the first request.